--- a/consul/docker-compose.yml
+++ b/consul/docker-compose.yml
@@ -1,17 +1,32 @@
 version: '3.6'
 
 services:
-  consul1:
+
+  consol-dev:
     image: consul
     restart: always
-    hostname: consul1
+    hostname: consul-dev
     ports: 
       - 8300:8300
       - 8500:8500
-      - 8600:8600
-    command: agent -dev -ui -client=0.0.0.0 -bootstrap-expect=1 -node=consul1 
-  
+      - 8600:8600/udp
+    command: agent -dev -ui
 
+  consul-server-1:
+    image: consul
+    restart: always
+    hostname: consul-server-1
+    ports: 
+      - 8300:8300
+      - 8500:8500
+      - 8600:8600/udp
+    command: agent -server -ui -node=server-1 -bootstrap-expect=1 -client=0.0.0.0
+
+  consul-client-1:
+    image: consul
+    restart: always
+    hostname: consul-client-1
+    command: agent -node=client-1 -join=consul-server-1
 
 
     
