🔧 add redis.conf

--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -504,7 +504,7 @@ replica-priority 100
 # 150k passwords per second against a good box. This means that you should
 # use a very strong password otherwise it will be very easy to break.
 #
-requirepass Szz874624842
+requirepass yourpassword
 
 # Command renaming.
 #
@@ -696,7 +696,7 @@ replica-lazy-flush no
 #
 # Please check http://redis.io/topics/persistence for more information.
 
-appendonly no
+appendonly yes
 
 # The name of the append only file (default: "appendonly.aof")
 
