--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -1,13 +1,13 @@
-version: '3.1'
+version: '3.6'
 
 services:
 
   redis:
     image: redis
     restart: always
+    command: redis-server /usr/local/etc/redis/redis.conf 
     ports:
       - 6379:6379
     volumes: 
-      - /data/redis/config/redis.conf:/etc/redis/redis.conf
-      - /data/redis/data:/data
-    command: redis-server /etc/redis/redis.conf
+      - /home/redis/config:/usr/local/etc/redis
+      - /home/redis/data:/data
