--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.6'
 
 services:
 
@@ -9,9 +9,10 @@ services:
     ports: 
       - 3306:3306
     volumes: 
-      - /data/mysql/config:/etc/mysql
-      - /data/mysql/data:/var/lib/mysql
+      - /home/mysql/config:/etc/mysql
+      - /home/mysql/data-files:/var/lib/mysql-files
+      - /home/mysql/data:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: 
+      MYSQL_USER: 
+      MYSQL_PASSWORD: 
